; ModuleID = '/home/carl/AnghaBench/freebsd/sys/i386/linux/extr_linux_copyout.c_futex_orl.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/i386/linux/extr_linux_copyout.c_futex_orl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.futex_st0 = type { i32, i32* }

@futex_orl_slow0 = common dso_local global i32 0, align 4
@EFAULT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @futex_orl(i32 %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca %struct.futex_st0, align 8
  store i32 %0, i32* %5, align 4
  store i32* %1, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  %9 = load i32, i32* %5, align 4
  %10 = getelementptr inbounds %struct.futex_st0, %struct.futex_st0* %8, i32 0, i32 0
  store i32 %9, i32* %10, align 8
  %11 = load i32*, i32** %7, align 8
  %12 = getelementptr inbounds %struct.futex_st0, %struct.futex_st0* %8, i32 0, i32 1
  store i32* %11, i32** %12, align 8
  %13 = load i32*, i32** %6, align 8
  %14 = ptrtoint i32* %13 to i32
  %15 = load i32, i32* @futex_orl_slow0, align 4
  %16 = call i64 @cp_slow0(i32 %14, i32 4, i32 1, i32 %15, %struct.futex_st0* %8)
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %21

18:                                               ; preds = %3
  %19 = load i32, i32* @EFAULT, align 4
  %20 = sub nsw i32 0, %19
  store i32 %20, i32* %4, align 4
  br label %22

21:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %22

22:                                               ; preds = %21, %18
  %23 = load i32, i32* %4, align 4
  ret i32 %23
}

declare dso_local i64 @cp_slow0(i32, i32, i32, i32, %struct.futex_st0*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
